--- a/webblog/package.json
+++ b/webblog/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
+    "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "log4js": "^6.7.0",
